force-app/main/default/objects/Zendesk__Zendesk_Ticket_Comment__c/Zendesk__Zendesk_Ticket_Comment__c.object-meta.xml
<CustomObject>
    <description>Holds the comments for a Zendesk Support Ticket</description>
    <label>Zendesk Support Ticket Comment</label>
    <nameField>
        <label>Zendesk Support Ticket Comment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Support Ticket Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>