force-app/main/default/objects/Zendesk__Zendesk_Ticket_Comment__c/fields/Zendesk__author__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__author__c</fullName>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>