force-app/main/default/objects/Zendesk__Zendesk_Ticket_Comment__c/fields/Zendesk__body__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>