force-app/main/default/objects/Zendesk__Zendesk_Ticket_Comment__c/fields/Zendesk__comment_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__comment_ID__c</fullName>
    <externalId>true</externalId>
    <label>Comment ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>