force-app/main/default/objects/Zendesk__Zendesk_Ticket_Comment__c/fields/Zendesk__is_public__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__is_public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>