force-app/main/default/objects/Zendesk__Zendesk_Ticket_Comment__c/fields/Zendesk__Zendesk_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_Ticket__c</fullName>
    <label>Zendesk Support Ticket</label>
    <referenceTo>Zendesk__Zendesk_Ticket__c</referenceTo>
    <relationshipLabel>Zendesk Support Ticket Comments</relationshipLabel>
    <relationshipName>Zendesk_Ticket_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>